--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,24 @@ jobs:
       - image: circleci/node:8
     steps:
       - checkout
+      - restore_cache:
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Build
-          command: npm start
-  test:
-    steps:
-      - checkout
+          command: npm ci
+      - save_cache:
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - /home/circleci/.npm
       - run:
-          name: Test
-          command: npm test
+        name: Run Tests
+        command: npm test
+  #test:
+  # steps:
+  #    - checkout
+  #    - run:
+  #        name: Test
+  #        command: npm test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -27,4 +36,4 @@ workflows:
   workflow1:
     jobs:
       - build
-      - test
+    #  - test
