--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Build
-          command: npm start
+          command: npm build
       - save_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
           paths:
