--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,18 +11,20 @@ jobs:
       - image: circleci/node:8
     steps:
       - checkout
+      - node/install-packages:
+        pkg-manager: npm
       - restore_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Build
-          command: npm build
+          command: npm ci
       - save_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
           paths:
             - /home/circleci/.npm
       - run:
-        name: Run Tests
-        command: npm test
+          name: Run Tests
+          command: npm test
   #test:
   # steps:
   #    - checkout
