--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,16 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
+orbs:
+  react: thefrontside/react@0.2.0
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  build:
-    working_directory: ~/SWE_Project1/NewApp/testapp1
-    docker:
-      - image: circleci/node:8
-    steps:
-      - checkout
-      - node/install-packages:
-          pkg-manager: npm
-      - restore_cache:
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
-      - run:
-          name: Build
-          command: npm ci
-      - save_cache:
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
-          paths:
-            - /home/circleci/.npm
-      - run:
-          name: Run Tests
-          command: npm test
-  #test:
-  # steps:
-  #    - checkout
-  #    - run:
-  #        name: Test
-  #        command: npm test
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  workflow1:
+  push:
     jobs:
-      - build
-    #  - test
+      - react/install
+      - react/eslint:
+          requires:
+            - react/install
+      - react/test:
+          requires:
+            - react/install
+      - react/coverage:
+          requires:
+            - react/install
