--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,25 @@
-orbs:
-  react: thefrontside/react@0.2.0
-version: 2.1
-workflows:
-  push:
-    jobs:
-      - react/install
-      - react/eslint:
-          requires:
-            - react/install
-      - react/test:
-          requires:
-            - react/install
-      - react/coverage:
-          requires:
-            - react/install
+version: 2
+jobs:
+  build:
+    working_directory: ~/NewApp/testapp1
+    docker:
+      - image: circleci/node:8
+    steps:
+      - checkout
+      - restore_cache:
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Dependencies
+          command: npm ci
+      - save_cache:
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - /home/circleci/.npm
+      - run:
+          name: Run Tests
+          command: npm test
 
+workflows:
+  basic:
+    jobs:
+      - build
