--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,3 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 orbs:
   node: circleci/node@4.7.0
@@ -25,7 +23,7 @@ jobs:
             - .
   deploy: # this can be any name you choose
     docker:
-      - image: cimg/node:16.14.1
+      - image: cimg/node:17.2.0
     steps:
       - attach_workspace:
           at: ~/NewApp/testapp1
@@ -39,15 +37,23 @@ workflows:
       - deploy:
           requires:
             - build_and_test # only deploy if the build_and_test job has completed
-
+          filters:
+            branches:
+              only: master # only deploy when on main/master
   nightly:
     triggers:
       - schedule:
           cron: "0 0 * * *"       
-
+          filters:
+            branches:
+              only:
+                - master
+                - docs-node-js-language-guide
     jobs:
       - build_and_test
       - deploy:
           requires:
             - build_and_test # only deploy if the build_and_test job has completed
-
+          filters:
+            branches:
+              only: master # only deploy when on main/master
