--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ jobs:
     docker:
       - image: circleci/node:8
     steps:
+      - checkout
+      - run:
+          name: CHECK
+          command: pwd
       - restore_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
