--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   run_tests:
     docker:
-      - image: circleci.node:8
+      - image: circleci/node:8
     steps:
       - checkout
       - run:
