--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run:
           name: Install npm dependencies
           command:
-            npm install --save
+            npm install --no-package-lock
       - run:
           name: run unit tests
           command:
