--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,18 @@
 version: 2.1
 jobs:
   build:
-    working_directory: ~/SWE_Project1
+    working_directory: ~/SWE_Project1/NewApp/testapp1
     docker:
       - image: circleci/node:8
     steps:
       - checkout
       - run:
           name: CHECK
-          command: cd NewApp/testapp1
+          command: |
+          pw
+          ls
+          cd NewApp
+          ls
       - restore_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
