--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,7 @@ jobs:
       - checkout
       - run:
           name: CHECK
-          command: |
-          pwd
+          command: pwd
           ls
           cd NewApp
           ls
