--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
       - checkout
       - run:
           name: CHECK
-          command: pwd
-          ls
-          cd NewApp
-          ls
+          command: pwd |
+          ls |
+          cd NewApp |
+          ls 
       - restore_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
