--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,29 @@
 version: 2.1
 jobs:
   run_tests:
+
+    working_directory: ~/repo
+
     docker:
       - image: circleci/node:16
     steps:
       - checkout
+
+      - restore_cache:
+        keys:
+          - v1-dependencies-{{checksum "package.json"}}
+          - v1-dependencies-
+
       - run:
           name: Install npm dependencies
           command:
             npm install --no-package-lock
+
+      - save_cache:
+        paths:
+          -node_modules
+        key: v1-dependencies-{{checksum "package.json"}}
+
       - run:
           name: run unit tests
           command:
