--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
 
       - run:
           name: Install npm dependencies
-          command:
-            npm install --no-package-lock
+          command: |
+            npm install
 
       - save_cache:
         paths:
@@ -26,7 +26,7 @@ jobs:
 
       - run:
           name: run unit tests
-          command:
+          command: |
             npm test
 workflows:
   build_test:
