--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,35 +6,22 @@ jobs:
       - image: circleci/node:8
     steps:
       - checkout
-      - run:
-          name: CHECK1
-          command: |
-            pwd
-            ls
-            cd NewApp
-            pwd
-            ls
-      - run:
-          name: CHECK2
-          command: ls
-      - run:
-          name: CHECK3
-          command: cd NewApp
-      - run:
-          name: CHECK4
-          command: ls
       - restore_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
-          command: npm ci
+          command: |
+            cd NewApp/testapp1
+            npm ci
       - save_cache:
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
           paths:
             - /home/circleci/.npm
       - run:
           name: Run Tests
-          command: npm test
+          command: |
+            cd NewApp/testapp1
+            npm test
 
 workflows:
   basic:
