--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,10 @@
 version: 2.1
 jobs:
   run_tests:
-
-    
-
     docker:
       - image: circleci/node:16
     steps:
       - checkout
-
       - restore_cache:
         keys:
           - v1-dependencies-{{checksum "package.json"}}
@@ -16,8 +12,8 @@ jobs:
 
       - run:
           name: Install npm dependencies
-          command: |
-            npm install
+          command: npm install
+            
 
       - save_cache:
         paths:
@@ -26,8 +22,7 @@ jobs:
 
       - run:
           name: run unit tests
-          command: |
-            npm test
+          command: npm test
 workflows:
   build_test:
     jobs:
