--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - checkout
       - restore_cache:
+          command: |
+            cd NewApp/testapp1
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
@@ -14,6 +16,8 @@ jobs:
             cd NewApp/testapp1
             npm ci
       - save_cache:
+          command: |
+            cd NewApp/testapp1
           key: npm-cache-v1-{{ checksum "package-lock.json" }}
           paths:
             - /home/circleci/.npm
