--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,16 @@
 version: 2.1
 jobs:
   build:
-    working_directory: ~/SWE_Project1/NewApp/testapp1
+    working_directory: ~/SWE_Project1
     docker:
       - image: circleci/node:8
     steps:
       - checkout
-      - restore_cache:
-          command: |
-            cd NewApp/testapp1
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: |
             cd NewApp/testapp1
             npm ci
-      - save_cache:
-          command: |
-            cd NewApp/testapp1
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
-          paths:
-            - /home/circleci/.npm
       - run:
           name: Run Tests
           command: |
