--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: magic command
+          command: npm install react-scripts --save
+      - run:
           name: Install Dependencies
           command: |
             cd NewApp/testapp1
