--- a/NewApp/testapp1/package.json
+++ b/NewApp/testapp1/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.6.10",
     "install": "^0.13.0",
     "react": "^17.0.2",
@@ -15,7 +16,11 @@
     "web-vitals": "^2.1.4"
   },
   "env": {
-    "test": { "presets": ["react-app"] }
+    "test": {
+      "presets": [
+        "react-app"
+      ]
+    }
   },
   "scripts": {
     "start": "react-scripts start",
