--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "react-bootstrap": "^2.2.3"
+    "emailjs-com": "^3.2.0",
+    "react-bootstrap": "^2.2.3",
+    "react-scripts": "^5.0.1"
   }
 }
